# cmake-supporter-sample

./: .gitmodules  CMakeLists.txt  README.md
modules/: CMakeLists.txt
modules/common/in/: CMSSample_config.h.in
modules/common/include/: logger.h
modules/foo/: CMakeLists.txt
modules/foo/include/: foo.h
modules/foo/src/: foo.cpp
modules/var/: CMakeLists.txt
modules/var/include/: var.h
modules/var/src/: var.cpp
samples/: CMakeLists.txt
samples/common/: CMakeLists.txt
samples/common/src/: main.cpp
test/: README.md
